feat: Add Tinos font and star list style
Introduces the 'Tinos' font option and the 'star' list style to enhance document styling capabilities. Updates `index.html` to include the Tinos font link and `types.ts` to reflect the new font and list style options. The builder components (`AIResumeBuilder.tsx`, `CoverLetterBuilder.tsx`, `ResignationLetterBuilder.tsx`) are updated to support the new list style.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=DM+Sans:wght@800&family=Roboto:wght@400;700&family=EB+Garamond:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=DM+Sans:wght@800&family=Roboto:wght@400;700&family=EB+Garamond:wght@400;700&family=Tinos:wght@400;700&display=swap" rel="stylesheet">
     <!-- html2pdf.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
@@ -25,6 +25,7 @@
         .font-serif { font-family: 'EB Garamond', serif !important; }
         .font-mono { font-family: 'Roboto', sans-serif !important; }
         .font-arial { font-family: Arial, Helvetica, sans-serif !important; }
+        .font-times { font-family: 'Tinos', 'Times New Roman', serif !important; }
 
         ::-webkit-scrollbar {
             width: 6px;
