--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 }
 </script>
 </head>
-<body>
+<body class="theme-dark">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
