feat: Integrate Datadog for RUM and logging
Adds Datadog Real User Monitoring (RUM) and logging capabilities to the Zysculpt application. This integration will provide insights into user behavior, performance metrics, and error tracking.

Key changes include:
- Installing Datadog browser SDKs (`@datadog/browser-logs`, `@datadog/browser-rum`).
- Initializing Datadog RUM and logging services in the application entry point.
- Configuring Datadog user context upon authentication to associate monitoring data with users.
- Adding Datadog log reporting for critical errors, such as missing API keys.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "docx": "https://esm.sh/docx@^9.1.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1",
+    "@datadog/browser-logs": "https://esm.sh/@datadog/browser-logs@^6.25.1",
+    "@datadog/browser-rum": "https://esm.sh/@datadog/browser-rum@^6.25.1"
   }
 }
 </script>
